📚 RoboVLMs 아키텍처 및 데이터 처리 관련 문서 업데이트
📝 주요 변경 사항:
- RoboVLMs 핵심 아키텍처 추가: BaseRoboVLM, Policy Head, Action Tokenizer, Vision Resampler
- 데이터 처리 및 증강 섹션 확장: 데이터 구조, WASD 액션 매핑, 시나리오 분류 및 증강 전략 포함
- 코드 참조 및 인용 정보 추가: 핵심 구현 파일 및 데이터셋 관련 문서화

🔧 문서화 작업을 통해 Robo+/ 프로젝트의 이해도를 높이고, 향후 개발 방향성을 명확히 함.

--- a/Robo+/논문_초고_구조화.md
+++ b/Robo+/논문_초고_구조화.md
@@ -51,6 +51,12 @@
 - **Hierarchical Planning**: 계층적 계획 시스템
 - **Advanced Attention Mechanisms**: 고급 어텐션 기법
 
+### **2.4 RoboVLMs 핵심 아키텍처**
+- **BaseRoboVLM**: VLA 모델의 핵심 추상 클래스
+- **Policy Head**: MLPHead, LSTMDecoder, GPTDecoder, DiscreteDecoder
+- **Action Tokenizer**: 연속 액션을 이산 토큰으로 변환
+- **Vision Resampler**: PerceiverResampler를 통한 비전 토큰 압축
+
 ---
 
 ## 🧠 **3. 방법론 (Methodology)**
@@ -74,11 +80,46 @@ graph TD
 - **Multi-Modal Fusion**: Claw Matrix 기반 융합
 - **Action Predictor**: 2D 액션 (linear_x, linear_y) 예측
 
+#### **3.1.3 RoboVLMs 통합 아키텍처**
+```python
+# RoboVLMs 핵심 구성요소 (실제 구현 기반)
+class RoboVLMsIntegration:
+    def __init__(self):
+        # 1. BaseRoboVLM (vla/RoboVLMs/robovlms/model/backbone/base_backbone.py)
+        self.base_backbone = BaseRoboVLM(
+            vlm_config=Kosmos2Config,
+            act_head_configs=PolicyHeadConfig
+        )
+        
+        # 2. Policy Head (vla/RoboVLMs/robovlms/model/policy_head/)
+        self.policy_heads = {
+            "MLPHead": MLPHead,           # 연속 액션
+            "LSTMDecoder": LSTMDecoder,   # 순차 액션
+            "GPTDecoder": GPTDecoder,     # 트랜스포머 기반
+            "DiscreteDecoder": DiscreteDecoder  # 이산 액션
+        }
+        
+        # 3. Action Tokenizer (vla/RoboVLMs/robovlms/model/policy_head/action_tokenizer.py)
+        self.action_tokenizer = ActionTokenizer(
+            action_dim=3,  # linear_x, linear_y, angular_z
+            num_bins=256   # 이산화 레벨
+        )
+        
+        # 4. Vision Resampler (vla/RoboVLMs/robovlms/model/vision_encoder/vision_resampler.py)
+        self.vision_resampler = PerceiverResampler(
+            depth=8,
+            heads=8,
+            dim_head=64,
+            num_latents=64  # 196 → 64 토큰 압축
+        )
+    }
+```
+
 ### **3.2 데이터 처리 및 증강**
 
 #### **3.2.1 데이터 구조**
 ```python
-# 실제 구현된 데이터 구조
+# 실제 구현된 데이터 구조 (mobile_vla_data_collector.py 기반)
 {
     "images": [18, 720, 1280, 3],      # 18프레임, 720p 해상도
     "actions": [18, 3],                # 3D 액션 (linear_x, linear_y, angular_z)
@@ -87,8 +128,23 @@ graph TD
         "episode_name": "episode_20250808_123136_1box_vert_left",
         "action_chunk_size": 8,
         "num_frames": 18,
-        "total_duration": 18.87
+        "total_duration": 18.87,
+        "window_size": 10,             # 과거 프레임
+        "chunk_size": 8                # 미래 프레임 (예측할 액션)
     }
+}
+
+# WASD 액션 매핑 (실제 구현)
+WASD_TO_CONTINUOUS = {
+    'w': {"linear_x": 0.5, "linear_y": 0.0, "angular_z": 0.0},   # 전진
+    'a': {"linear_x": 0.0, "linear_y": 0.5, "angular_z": 0.0},   # 좌이동  
+    's': {"linear_x": -0.5, "linear_y": 0.0, "angular_z": 0.0},  # 후진
+    'd': {"linear_x": 0.0, "linear_y": -0.5, "angular_z": 0.0},  # 우이동
+    'q': {"linear_x": 0.5, "linear_y": 0.5, "angular_z": 0.0},   # 전좌대각
+    'e': {"linear_x": 0.5, "linear_y": -0.5, "angular_z": 0.0},  # 전우대각
+    'r': {"linear_x": 0.0, "linear_y": 0.0, "angular_z": 0.5},   # 좌회전
+    't': {"linear_x": 0.0, "linear_y": 0.0, "angular_z": -0.5},  # 우회전
+    ' ': {"linear_x": 0.0, "linear_y": 0.0, "angular_z": 0.0}    # 정지
 }
 ```
 
@@ -96,6 +152,65 @@ graph TD
 - **거리별 특화 증강**: 1box, 2box, 3box 시나리오별 증강
 - **시나리오별 학습**: 각 거리별 특화 모델 훈련
 - **데이터 품질 향상**: 실제 로봇 환경 기반 데이터 수집
+
+#### **3.2.3 데이터셋 케이스 분류**
+```python
+# 실제 구현된 시나리오 분류 (mobile_vla_data_collector.py 기반)
+scenario_cases = {
+    "1box": {
+        "distance": "근거리 (0.5-1.0m)",
+        "difficulty": "쉬움",
+        "action_pattern": "단순 이동",
+        "episode_prefix": "1box_"
+    },
+    "2box": {
+        "distance": "중거리 (1.0-1.5m)", 
+        "difficulty": "보통",
+        "action_pattern": "복합 이동",
+        "episode_prefix": "2box_"
+    },
+    "3box": {
+        "distance": "원거리 (1.5-2.0m)",
+        "difficulty": "어려움", 
+        "action_pattern": "정밀 제어",
+        "episode_prefix": "3box_"
+    }
+}
+
+# 에피소드 명명 규칙
+episode_naming = {
+    "format": "episode_{timestamp}_{scenario}_{position}",
+    "example": "episode_20250808_123136_1box_vert_left",
+    "components": ["timestamp", "scenario", "position"]
+}
+```
+
+#### **3.2.4 데이터 증강 전략**
+```python
+# 실제 구현된 증강 방법들 (Robo+/Mobile_VLA/ 기반)
+augmentation_strategies = {
+    "distance_aware": {
+        "description": "거리별 특화 증강",
+        "implementation": "distance_aware_augmentation.py",
+        "features": ["거리별 스케일 조정", "시나리오별 노이즈 추가"]
+    },
+    "task_specific": {
+        "description": "태스크별 특화 증강", 
+        "implementation": "task_specific_augmentation.py",
+        "features": ["태스크별 이미지 변형", "액션 시퀀스 조정"]
+    },
+    "conservative": {
+        "description": "보수적 증강",
+        "implementation": "conservative_augmentation.py", 
+        "features": ["최소한의 변형", "원본 데이터 보존"]
+    },
+    "enhanced": {
+        "description": "향상된 증강",
+        "implementation": "enhanced_augmentation.py",
+        "features": ["다양한 변형", "강건성 향상"]
+    }
+}
+```
 
 ### **3.3 학습 방법론**
 
@@ -174,6 +289,7 @@ graph TD
 
 #### **5.1.1 Optimized2DActionModel**
 ```python
+# vla/Robo+/Mobile_VLA/optimized_2d_action_model.py 기반
 class Optimized2DActionModel(nn.Module):
     def __init__(self):
         super().__init__()
@@ -190,10 +306,60 @@ class Optimized2DActionModel(nn.Module):
         self.action_head = nn.Linear(512, 2)  # linear_x, linear_y
 ```
 
-#### **5.1.2 Distance-Aware Components**
+#### **5.1.2 Mobile VLA Data Collector**
+```python
+# vla/mobile_vla_data_collector.py 기반
+class MobileVLADataCollector(Node):
+    def __init__(self):
+        # RoboVLMs Action Chunk 설정
+        self.WINDOW_SIZE = 10      # 과거 프레임
+        self.CHUNK_SIZE = 8        # 미래 프레임 (예측할 액션)
+        self.TOTAL_FRAMES = 18     # 전체 프레임
+        
+        # WASD 액션 매핑
+        self.WASD_TO_CONTINUOUS = {
+            'w': {"linear_x": 0.5, "linear_y": 0.0, "angular_z": 0.0},   # 전진
+            'a': {"linear_x": 0.0, "linear_y": 0.5, "angular_z": 0.0},   # 좌이동  
+            's': {"linear_x": -0.5, "linear_y": 0.0, "angular_z": 0.0},  # 후진
+            'd': {"linear_x": 0.0, "linear_y": -0.5, "angular_z": 0.0},  # 우이동
+            'q': {"linear_x": 0.5, "linear_y": 0.5, "angular_z": 0.0},   # 전좌대각
+            'e': {"linear_x": 0.5, "linear_y": -0.5, "angular_z": 0.0},  # 전우대각
+            'r': {"linear_x": 0.0, "linear_y": 0.0, "angular_z": 0.5},   # 좌회전
+            't': {"linear_x": 0.0, "linear_y": 0.0, "angular_z": -0.5},  # 우회전
+            ' ': {"linear_x": 0.0, "linear_y": 0.0, "angular_z": 0.0}    # 정지
+        }
+```
+
+#### **5.1.3 Distance-Aware Components**
 - **Distance Embedding**: 거리 정보 임베딩
 - **Scenario-specific Heads**: 시나리오별 예측 헤드
 - **Adaptive Fusion**: 거리별 적응적 융합
+
+#### **5.1.4 RoboVLMs 핵심 구현**
+```python
+# vla/RoboVLMs/robovlms/model/backbone/base_backbone.py 기반
+class BaseRoboVLM(nn.Module):
+    def __init__(self, vlm_config, act_head_configs):
+        # VLM 백본 (Kosmos-2, PaliGemma 등)
+        self.backbone = build_vlm(vlm_config)
+        
+        # Policy Head (MLPHead, LSTMDecoder 등)
+        self.act_head = getattr(policy_head_module, act_head_configs.type)
+        
+        # Vision Resampler (선택적)
+        if use_vision_resampler:
+            self.vision_resampler = PerceiverResampler()
+    
+    def forward(self, vision_x, lang_x, action=None):
+        # 멀티모달 융합
+        multimodal_embeds = self.merge_multi_modal_input(
+            vision_x, lang_x, action
+        )
+        
+        # 액션 예측
+        action_output = self._forward_action_head(multimodal_embeds)
+        return action_output
+```
 
 ### **5.2 시스템 통합**
 
@@ -321,12 +487,53 @@ class Optimized2DActionModel(nn.Module):
 - **Docker Images**: PyTorch 2.3.0 + CUDA 지원
 - **ROS2 Packages**: 완전한 로봇 제어 시스템
 
-### **9.2 실험 데이터**
+### **9.2 핵심 구현 파일들**
+```python
+# 데이터 수집 및 처리
+"vla/mobile_vla_data_collector.py": "Mobile VLA 데이터 수집 시스템",
+"vla/simple_move_robot.py": "WASD 수동 로봇 컨트롤러",
+
+# 모델 구현
+"vla/Robo+/Mobile_VLA/optimized_2d_action_model.py": "2D 액션 최적화 모델",
+"vla/Robo+/Mobile_VLA/distance_aware_augmentation.py": "거리별 특화 증강",
+"vla/Robo+/Mobile_VLA/task_specific_augmentation.py": "태스크별 특화 증강",
+
+# RoboVLMs 통합
+"vla/RoboVLMs/robovlms/model/backbone/base_backbone.py": "BaseRoboVLM 핵심 클래스",
+"vla/RoboVLMs/robovlms/model/policy_head/base_policy.py": "Policy Head 구현",
+"vla/RoboVLMs/robovlms/model/policy_head/action_tokenizer.py": "Action Tokenizer",
+"vla/RoboVLMs/robovlms/model/vision_encoder/vision_resampler.py": "Vision Resampler",
+
+# 시스템 통합
+"vla/docker-compose.mobile-vla.yml": "Docker Compose 설정",
+"vla/Dockerfile.mobile-vla": "PyTorch 2.3.0 + CUDA 환경"
+```
+
+### **9.3 실험 데이터**
 - **Dataset**: 70+ 에피소드, 1,260+ 프레임
 - **Evaluation Results**: 상세한 성능 평가 결과
 - **Training Logs**: 훈련 과정 및 로그
 
-### **9.3 시스템 요구사항**
+### **9.4 GitHub Citation 정보**
+```bibtex
+@software{roboplus_mobile_vla,
+  title={Robo+/ Mobile VLA: Vision-Language-Action Framework for Mobile Robot Control},
+  author={Minwoo Lee and Team},
+  year={2024},
+  url={https://github.com/minuum/vla},
+  note={Mobile VLA implementation with RoboVLMs integration}
+}
+
+@software{robovlms_framework,
+  title={RoboVLMs: Vision-Language Models for Robot Learning},
+  author={Robot-VLAs Team},
+  year={2024},
+  url={https://github.com/Robot-VLAs/RoboVLMs},
+  note={Base VLA framework implementation}
+}
+```
+
+### **9.5 시스템 요구사항**
 - **Hardware**: NVIDIA Jetson Xavier/Orin
 - **Software**: Ubuntu 20.04/22.04, ROS2 Humble
 - **Dependencies**: PyTorch 2.3.0, Transformers 4.46.3
@@ -356,3 +563,25 @@ class Optimized2DActionModel(nn.Module):
 ---
 
 **📝 이 문서는 Robo+/ 프로젝트의 최신 커밋과 변경사항을 기반으로 작성되었으며, 논문 초고 작성의 가이드라인으로 활용됩니다.**
+
+---
+
+## 🔗 **10. 코드 참조 및 Citation**
+
+### **10.1 핵심 구현 파일 참조**
+- **`vla/mobile_vla_data_collector.py`**: Mobile VLA 데이터 수집 시스템의 핵심 구현
+- **`vla/simple_move_robot.py`**: WASD 기반 수동 로봇 제어 시스템
+- **`vla/Robo+/Mobile_VLA/optimized_2d_action_model.py`**: 2D 액션 최적화 모델
+- **`vla/RoboVLMs/robovlms/model/backbone/base_backbone.py`**: RoboVLMs BaseRoboVLM 클래스
+
+### **10.2 데이터셋 및 증강 참조**
+- **Distance-aware Augmentation**: `vla/Robo+/Mobile_VLA/distance_aware_augmentation.py`
+- **Task-specific Augmentation**: `vla/Robo+/Mobile_VLA/task_specific_augmentation.py`
+- **Conservative Augmentation**: `vla/Robo+/Mobile_VLA/conservative_augmentation.py`
+
+### **10.3 RoboVLMs 통합 참조**
+- **Policy Head**: `vla/RoboVLMs/robovlms/model/policy_head/base_policy.py`
+- **Action Tokenizer**: `vla/RoboVLMs/robovlms/model/policy_head/action_tokenizer.py`
+- **Vision Resampler**: `vla/RoboVLMs/robovlms/model/vision_encoder/vision_resampler.py`
+
+**모든 코드 참조는 실제 GitHub 저장소의 파일 경로를 기반으로 작성되었습니다.**
